--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/antd/4.12.3/antd.min.js" integrity="sha512-rDnul7w0yOHbU7APc95arF5ae5lCN4HAncTuP4ZQy4adA9pHXTOytebq9IPAACwPBwPxMGjQ3pTUNAgtKsdIRg==" crossorigin="anonymous"></script>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/antd/4.12.3/antd.min.js" integrity="sha512-rDnul7w0yOHbU7APc95arF5ae5lCN4HAncTuP4ZQy4adA9pHXTOytebq9IPAACwPBwPxMGjQ3pTUNAgtKsdIRg==" crossorigin="anonymous"></script>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
